Avoid warning when dynamic attach is enabled with JVM flag (#3551)
Fixes #3512